amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-arguments.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-arguments.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'weight' required by interface 'HasWeight' is missing it's required arguments: unit
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-arguments.api.graphql#/declares/shape/MissingArguments
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(11,1)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Argument 'unit' of field 'weight' required by interface 'HasWeight' must be of type 'String'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-arguments.api.graphql#/declares/shape/BrokenInvariance
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(14,11)-(14,24)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: Field 'weight' required by interface 'HasWeight' does not define a non-optional argument 'other'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-arguments.api.graphql#/declares/shape/NonNullableAdditionalArguments
  Property: http://a.ml/vocabularies/shapes#schema
  Range: [(18,33)-(18,47)]
  Location: 
